updating to 0.2.0, applying bugixes, doc updates, unit coverage